Got rid of grid. Tiles now display below each other with a bottom margin to keep them separate.

--- a/Ró_SortTiles2/CSS/style.css
+++ b/Ró_SortTiles2/CSS/style.css
@@ -44,7 +44,7 @@ h3 a:hover {
     font-weight: 300;
     font-size: large;
     display: block;
-    position: absolute;
+    position: relative;
     background-color: #9B2B50;
     width:200px;
     height:80px;
